--- a/app-azure/appsettings.json
+++ b/app-azure/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RepoName": "this is sathishkumar repo name",
+  "ConnectionStrings": {
+    "DefaultConnection": "This values comes from application"
+  }
 }
