--- a/app-azure/app-azure.csproj
+++ b/app-azure/app-azure.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>app_azure</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="5.1.0" />
+  </ItemGroup>
+
 </Project>
